@@ -72,14 +72,20 @@ require 'lobbyist/workflow_system'
 # Library V2
 require 'lobbyist/v2/base'
 require 'lobbyist/v2/authorization'
+require 'lobbyist/v2/category'
+require 'lobbyist/v2/company_setting'
 require 'lobbyist/v2/company_user'
 require 'lobbyist/v2/company'
 require 'lobbyist/v2/contact'
+require 'lobbyist/v2/customer'
 require 'lobbyist/v2/data_upload'
 require 'lobbyist/v2/enterprise_setting'
 require 'lobbyist/v2/enterprise_user'
 require 'lobbyist/v2/enterprise'
 require 'lobbyist/v2/scotty_setting'
+require 'lobbyist/v2/smart_invite_setting'
+require 'lobbyist/v2/summary'
+require 'lobbyist/v2/urls'
 require 'lobbyist/v2/workflow_system'
 
 module Lobbyist
