@@ -27,6 +27,22 @@ module Lobbyist
         end
       end
 
+      def company_setting
+        @company_setting
+      end
+
+      def company_setting=(attributes)
+        @company_setting = CompanySetting.new(attributes)
+      end
+      
+      def smart_invite_setting
+        @smart_invite_setting
+      end
+
+      def smart_invite_setting=(attributes)
+        @smart_invite_setting = SmartInviteSetting.new(attributes)
+      end
+
       def self.list(params = {})
         create_collection_from_response(get('/v2/companies.json', params))
       end
