@@ -1,3 +1,5 @@
+* Updated the requires in lobbyist.rb to include newest additions.
+* Added Company Settings and Smart Invite Settings proxy models for V2.
 * Added Category list method.
 * Integrated V2 Category model with Company.
 * Added V2 Category proxy model.
